<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.codemaicon.atmempresaconsultoria.ContatoActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/detalhe_contato"
        app:srcCompat="@drawable/detalhe_contato"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="6dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoContato"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoEmail"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoTelefone"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="168dp" />
</LinearLayout>
